grammar.js
    manifest: $ => seq(
      $.main_section,
      repeat($.individual_section),
    ),

    // ----------------------------------------------------------------------
    //  main_section – attributes before the first "Name:" header
    // ----------------------------------------------------------------------
    main_section: $ => repeat1(choice(
      $.attribute_entry,
      $.continuation_line,
    )),

    // ----------------------------------------------------------------------
    //  individual_section – per-entry attributes delimited by "Name:"
    // ----------------------------------------------------------------------
    attribute_entry: $ => prec(-1, choice(
      // Manifest-Version
      seq(field('key', 'Manifest-Version'), ': ', field('value', $.manifest_version)),
      // Bundle-ManifestVersion
      seq(field('key', 'Bundle-ManifestVersion'), ': ', field('value', $.bundle_manifest_version)),
      // Bundle-SymbolicName
      seq(field('key', 'Bundle-SymbolicName'), ': ', field('value', $.bundle_symbolic_name)),
      // Bundle-Version
      seq(field('key', 'Bundle-Version'), ': ', field('value', $.bundle_version)),
      // Bundle-Name
      seq(field('key', 'Bundle-Name'), ': ', field('value', $.bundle_name)),
      // Bundle-ActivationPolicy
      seq(field('key', 'Bundle-ActivationPolicy'), ': ', field('value', $.bundle_activation_policy)),
      // Bundle-Activator
      seq(field('key', 'Bundle-Activator'), ': ', field('value', $.bundle_activator)),
      // ExtensionBundle-Activator (OSGi R8 §3.15.4)
      seq(field('key', 'ExtensionBundle-Activator'), ': ', field('value', $.bundle_activator)),
      // Bundle-Category
      seq(field('key', 'Bundle-Category'), ': ', field('value', $.bundle_category)),
      // Bundle-ClassPath
      seq(field('key', 'Bundle-ClassPath'), ': ', field('value', $.bundle_class_path)),
      // Bundle-Copyright
      seq(field('key', 'Bundle-Copyright'), ': ', field('value', $.bundle_copyright)),
      // Bundle-Description
      seq(field('key', 'Bundle-Description'), ': ', field('value', $.bundle_description)),
      // Bundle-DocURL
      seq(field('key', 'Bundle-DocURL'), ': ', field('value', $.bundle_docurl)),
      // Bundle-Localization
      seq(field('key', 'Bundle-Localization'), ': ', field('value', $.bundle_localization)),
      // Bundle-UpdateLocation
      seq(field('key', 'Bundle-UpdateLocation'), ': ', field('value', $.bundle_update_location)),
      // Bundle-Vendor
      seq(field('key', 'Bundle-Vendor'), ': ', field('value', $.bundle_vendor)),
      // Export-Package
      seq(field('key', 'Export-Package'), ': ', field('value', $.clause_values)),
      // Import-Package
      seq(field('key', 'Import-Package'), ': ', field('value', $.clause_values)),
      // Export-Service (deprecated)
      seq(field('key', 'Export-Service'), ': ', field('value', $.clause_values)),
      // Import-Service (deprecated)
      seq(field('key', 'Import-Service'), ': ', field('value', $.clause_values)),
      // Require-Capability – namespace-aware clauses
      seq(field('key', 'Require-Capability'), ': ', field('value', $.capability_values)),
      // Provide-Capability – namespace-aware clauses
      seq(field('key', 'Provide-Capability'), ': ', field('value', $.capability_values)),
      // Bundle-License
      seq(field('key', 'Bundle-License'), ': ', field('value', $.bundle_license)),
      // Bundle-Developers
      seq(field('key', 'Bundle-Developers'), ': ', field('value', $.bundle_developers)),
      // Bundle-SCM
      seq(field('key', 'Bundle-SCM'), ': ', field('value', $.bundle_scm)),
      // Bundle-NativeCode
      seq(field('key', 'Bundle-NativeCode'), ': ', field('value', $.bundle_native_code)),
      // Bundle-RequiredExecutionEnvironment (deprecated, OSGi R8 §3.4.1)
      seq(field('key', 'Bundle-RequiredExecutionEnvironment'), ': ', field('value', $.bree)),
      // Service-Component (OSGi Compendium R8 §112 – Declarative Services)
      seq(field('key', 'Service-Component'), ': ', field('value', $.service_component)),
      // Multi-Release (JAR spec – OSGi R8 §3.2.8)
      seq(field('key', 'Multi-Release'), ': ', field('value', $.multi_release)),
      // Bundle-Icon
      seq(field('key', 'Bundle-Icon'), ': ', field('value', $.bundle_icon)),
      // Require-Bundle
      seq(field('key', 'Require-Bundle'), ': ', field('value', $.require_bundle)),
      // Fragment-Host
      seq(field('key', 'Fragment-Host'), ': ', field('value', $.fragment_host)),
      // DynamicImport-Package
      seq(field('key', 'DynamicImport-Package'), ': ', field('value', $.dynamic_import_package)),

      // ================================================================
      //  Eclipse Foundation (Equinox) extension headers
      // ================================================================

      // Eclipse-PlatformFilter
      seq(field('key', 'Eclipse-PlatformFilter'), ': ', field('value', $.eclipse_platform_filter)),
      // Eclipse-BuddyPolicy
      seq(field('key', 'Eclipse-BuddyPolicy'), ': ', field('value', $.eclipse_buddy_policy)),
      // Eclipse-RegisterBuddy
      seq(field('key', 'Eclipse-RegisterBuddy'), ': ', field('value', $.eclipse_register_buddy)),
      // Eclipse-ExtensibleAPI
      seq(field('key', 'Eclipse-ExtensibleAPI'), ': ', field('value', $.eclipse_extensible_api)),
      // Eclipse-BundleShape
      seq(field('key', 'Eclipse-BundleShape'), ': ', field('value', $.eclipse_bundle_shape)),

      // ================================================================
      //  Spring Dynamic Modules extension headers
      // ================================================================

      // Spring-Context
      seq(field('key', 'Spring-Context'), ': ', field('value', $.spring_context)),
      // SpringExtender-Version
      seq(field('key', 'SpringExtender-Version'), ': ', field('value', $.spring_extender_version)),

      // ================================================================
      //  aQute / bnd build instructions
      // ================================================================

      // Private-Package
      seq(field('key', 'Private-Package'), ': ', field('value', $.clause_values)),
      // Include-Resource
      seq(field('key', 'Include-Resource'), ': ', field('value', $.include_resource)),
      // Ignore-Package
      seq(field('key', 'Ignore-Package'), ': ', field('value', $.ignore_package)),

      // ------------------------------------------------------------------
      //  Fallback: generic attribute_entry for unknown headers
      // ------------------------------------------------------------------
      seq(
        field('key', $.attribute_key),
        ': ',
        field('value', $.header_value),
      ),
    )),

    // ----------------------------------------------------------------------
    //  continuation_line – a wrapped continuation of the previous value
    // ----------------------------------------------------------------------
    manifest_version: $ => seq('1', '.', '0'),

    // ======================================================================
    //  Bundle-ManifestVersion
    // ======================================================================
    bundle_manifest_version: $ => $.number,

    // ======================================================================
    //  Bundle-SymbolicName (OSGi R8 §3.6.2)
    // ======================================================================
    bundle_symbolic_name: $ => seq(
      $.symbolic_name,
      repeat($.symbolic_name_parameter),
    ),
    symbolic_name: $ => $._unquoted_string,
    symbolic_name_parameter: $ => seq(';', $.directive_or_attribute),

    // ======================================================================
    //  Bundle-Version
    // ======================================================================
    bundle_version: $ => $.version,
    version: $ => $._version,

    // OSGi R8 §3.2.5: major(.minor(.micro(.qualifier)?)?)?
    _version: $ => seq(
      $.number,
      optional(seq(
        '.', $.number,
        optional(seq(
          '.', $.number,
          optional(seq('.', $.version_qualifier)),
        )),
      )),
    ),
    number: $ => token(/[0-9]+/),
    version_qualifier: $ => token(/[A-Za-z0-9_\-]+/),

    // ======================================================================
    //  Simple text headers – single token spanning continuation lines
    // ======================================================================
    bundle_name: $ => $._multiline_text,
    // Bundle-ActivationPolicy: "lazy" (OSGi R8 §3.2.1.1)
    bundle_activation_policy: $ => 'lazy',
    bundle_activator: $ => $._multiline_text,
    bundle_copyright: $ => $._multiline_text,
    bundle_update_location: $ => $._multiline_text,
    bundle_license: $ => choice(
      token('<<EXTERNAL>>'),
      commaSep1($.license_clause),
    ),
    license_clause: $ => seq($.license_identifier, repeat($.license_attr)),
    license_identifier: $ => $._unquoted_string,
    license_attr: $ => seq(';', $.directive_or_attribute),

    // ======================================================================
    //  Bundle-Developers
    // ======================================================================
    bundle_developers: $ => commaSep1($.developer_clause),
    developer_clause: $ => seq($.developer_identifier, repeat($.developer_attr)),
    developer_identifier: $ => $._unquoted_string,
    developer_attr: $ => seq(';', $.directive_or_attribute),

    // ======================================================================
    //  Bundle-SCM (OSGi R8 §3.2.1.17: comma-separated attributes)
    // ======================================================================
    bundle_scm: $ => commaSep1($.scm_attr),
    scm_attr: $ => $.attribute,

    // ======================================================================
    //  Bundle-NativeCode
    // ======================================================================
    bundle_native_code: $ => commaSep1($.native_code_clause),
    native_code_clause: $ => seq($.path, repeat($.native_code_attr)),
    native_code_attr: $ => seq(';', $.directive_or_attribute),

    directive_or_attribute: $ => choice(
      $.typed_attribute,
      $.directive,
      $.attribute,
    ),

    // ======================================================================
    //  Bundle-RequiredExecutionEnvironment (OSGi R8 §3.4.1)
    // ======================================================================
    bree: $ => commaSep1($.bree_clause),
    bree_clause: $ => seq(
      $.bree_token,
      optional($.bree_version_suffix),
      optional($.bree_sub_ee),
    ),
    bree_token: $ => token(/[A-Za-z][A-Za-z0-9]*/),
    bree_version_suffix: $ => seq(
      '-',
      $._version,
    ),
    bree_sub_ee: $ => seq(
      '/',
      $.bree_token,
      optional(seq('-', $._version)),
    ),

    // ======================================================================
    //  Bundle-Icon (OSGi R8 §3.2.1.10)
    // ======================================================================
    bundle_icon: $ => commaSep1($.icon_clause),
    icon_clause: $ => seq($.icon_path, repeat($.icon_param)),
    icon_path: $ => $._unquoted_string,
    icon_param: $ => seq(';', $.icon_attr),
    icon_attr: $ => seq(
      $.icon_attr_key,
      '=',
      $.icon_attr_value,
    ),
    icon_attr_key: $ => token(/[A-Za-z][A-Za-z0-9]*/),
    icon_attr_value: $ => token(/[0-9]+/),

    // ======================================================================
    //  Service-Component (OSGi Compendium R8 §112)
    // ======================================================================
    service_component: $ => commaSep1($.path),

    // ======================================================================
    //  Eclipse-PlatformFilter – LDAP filter with optional ; processing
    // ======================================================================
    eclipse_platform_filter: $ => $._multiline_text,

    // ======================================================================
    //  Eclipse-BuddyPolicy – comma-separated policy names
    // ======================================================================
    eclipse_buddy_policy: $ => commaSep1($.buddy_policy_token),
    buddy_policy_token: $ => token(/dependent|global|registered|app|ext|boot|parent/),

    // ======================================================================
    //  Eclipse-RegisterBuddy – comma-separated bundle symbolic names
    //  Parsed as multiline text since comma-separated bundle names
    //  overlap with the external scanner's token boundaries.
    // ======================================================================
    eclipse_register_buddy: $ => $._multiline_text,

    // ======================================================================
    //  Eclipse-ExtensibleAPI – true or false
    // ======================================================================
    eclipse_extensible_api: $ => choice('true', 'false'),

    // ======================================================================
    //  Eclipse-BundleShape – jar or dir
    // ======================================================================
    eclipse_bundle_shape: $ => choice('jar', 'dir'),

    // ======================================================================
    //  Spring-Context – comma-separated context definitions
    //  Parsed as multiline text; the mixed path/directive syntax
    //  (e.g. "*;create-asynchronously:=true;timeout:=60")
    //  conflicts with existing token boundaries.
    // ======================================================================
    spring_context: $ => $._multiline_text,

    // ======================================================================
    //  SpringExtender-Version – version range
    // ======================================================================
    spring_extender_version: $ => $._multiline_text,

    // ======================================================================
    //  Ignore-Package – comma-separated package names (may include wildcards)
    // ======================================================================
    ignore_package: $ => $._multiline_text,

    // ======================================================================
    //  Include-Resource – bnd build instruction
    // ======================================================================
    include_resource: $ => $._multiline_text,

    // ======================================================================
    //  Multi-Release (JAR spec – OSGi R8 §3.2.8)
    // ======================================================================
    multi_release: $ => choice('true', 'false'),

    // ======================================================================
    //  Require-Bundle
    // ======================================================================
    require_bundle: $ => commaSep1($.clause),

    // ======================================================================
    //  Fragment-Host
    // ======================================================================
    fragment_host: $ => $.clause,

    // ======================================================================
    //  DynamicImport-Package (OSGi R8 §3.2.1.22)
    // ======================================================================
    dynamic_import_package: $ => commaSep1($.dynamic_import_clause),
    dynamic_import_clause: $ => seq(
      $.wildcard_name,
      repeat(choice(
        seq(';', $.wildcard_name),
        $.dynamic_import_attribute,
      )),
    ),
    clause_values: $ => $.clauses,
    capability_values: $ => $.capabilities,

    clauses: $ => commaSep1($.clause),
    path: $ => token(/[A-Za-z0-9][A-Za-z0-9._\-\/]*/),

    _unquoted_string: $ => token(/[^\n\r;,"=<>|&!()\[\]\\]+/),
